<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:padding="16dp"
    tools:context=".Get_in_Touch">


    <TextView
        android:id="@+id/contactTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="GET IN TOUCH"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/contactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:barrierAllowsGoneWidgets="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactTitle">

        <!-- Phone Number -->
        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="Phone: 8936845863"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Email -->
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="Email: madhavkumar03032003@gmail.com"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Address -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/Adress"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialMediaLinks"
        android:layout_width="358dp"
        android:layout_height="473dp"
        android:layout_margin="5dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layoutDirection="inherit"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactDetails">


        <TextView
            android:id="@+id/linkedin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="8dp"
            android:text="@string/linkedin"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/github"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="8dp"
            android:text="@string/github"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="8dp"
            android:text="@string/facebook"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Instagram -->
        <TextView
            android:id="@+id/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="8dp"
            android:text="@string/instagram"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Twitter -->
        <TextView
            android:id="@+id/twitter"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="8dp"
            android:text="@string/twiter"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/discord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="8dp"
            android:text="@string/discord"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/telegramgram"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="8dp"
            android:text="@string/telegram"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/portflioweb"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autoLink="web"
            android:onClick="openLink"
            android:paddingBottom="5dp"
            android:text="@string/portflioweb_link"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/thank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/material_dynamic_primary70"
            android:fontFamily="@font/dmseriftext_regular"
            android:text="THANK YOU"
            android:textAlignment="center"
            android:textColor="@color/ic_launcher_background"
            android:textColorLink="#EEFFFFFF"
            android:textSize="25sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="© 2024 Madhav Kumar. All rights reserved."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>
