<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background1"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="104dp"
        android:layout_height="111dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clipToOutline="true"
        android:contentDescription="Madhav kumar"
        android:elevation="4dp"
        android:padding="4dp"
        android:src="@drawable/profilehoto2" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/madhav_kumar"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black" />

    <TextView
        android:id="@+id/Designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:textStyle="bold"
        android:text="@string/stream"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/Designation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="0dp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:text="@string/stream1"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif" />


    <TextView
        android:id="@+id/Bio"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:background="@color/material_dynamic_primary60"
        android:gravity="center"
        android:text="@string/your_bio"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="italic" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/purple_700" />


    <GridLayout
        android:layout_width="394dp"
        android:layout_height="276dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="4">

        <Button
            android:id="@+id/button_about_myself"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:text="About Myself" />

        <Button
            android:id="@+id/button_education"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="5dp"
            android:text="Education" />

        <Button
            android:id="@+id/button_hard_skill"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:text="Hard Skill" />

        <Button
            android:id="@+id/button_soft_skill"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:text="Soft Skill" />

        <Button
            android:id="@+id/button_professional_certificate"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:text="PROFESSIONAL CERTIFICATE" />

        <Button
            android:id="@+id/button_online_internship"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:text="ONLINE INTERNSHIP" />

        <Button
            android:id="@+id/button_project"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:text="Project" />

        <Button
            android:id="@+id/button_get_in_touch"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_marginRight="5dp"
            android:paddingTop="5dp"
            android:text="Get in Touch" />


    </GridLayout>

   <!-- <TextView
        android:id="@+id/signature"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:padding="15dp"
        android:text="© 2024 Madhav Kumar. All rights reserved."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />-->




</LinearLayout>
